# bloop

./: .clang-format  .gitignore  README.md  meson.build
resources/: meson.build
src/: depth_buffer.c  depth_buffer.h  dynlist.c  dynlist.h  graphics.c  graphics.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  mesh.inc  meson.build  model.c  model.h  pipeline.c  pipeline.h  pipeline.inc  simple_mesh.h  simple_pipeline.c  simple_pipeline.h  texture.c  texture.h  utility.c  utility.h  vector.c  vector.h  vertex.c  vertex.h
src/effects/: color_effect.c  color_effect.h  default_effect.c  default_effect.h  gouraud_effect.c  gouraud_effect.h  meson.build  phong_effect.c  phong_effect.h  rainbow_effect.c  rainbow_effect.h  simple_effect.c  simple_effect.h  texture_effect.c  texture_effect.h
src/meshes/: color_mesh.c  color_mesh.h  default_mesh.c  default_mesh.h  gouraud_mesh.c  gouraud_mesh.h  meson.build  normal_mesh.c  normal_mesh.h  position_mesh.c  position_mesh.h  rainbow_mesh.c  rainbow_mesh.h  simple_mesh.c  simple_mesh.h  texture_mesh.c  texture_mesh.h
src/pipelines/: color_pipeline.c  color_pipeline.h  default_pipeline.c  default_pipeline.h  gouraud_pipeline.c  gouraud_pipeline.h  meson.build  phong_pipeline.c  phong_pipeline.h  rainbow_pipeline.c  rainbow_pipeline.h  simple_pipeline.h  texture_pipeline.c  texture_pipeline.h
src/scenes/: color_cube_scene.c  color_cube_scene.h  cube_scene.c  cube_scene.h  gouraud_scene.c  gouraud_scene.h  meson.build  rainbow_cube_scene.c  rainbow_cube_scene.h  simple_cube_scene.c  simple_cube_scene.h  solid_cube_scene.c  solid_cube_scene.h  teapot_scene.c  teapot_scene.h  (+2 more)
